# health-export-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish-container.yml
k8s/: health-export-api.yaml
src/health_export_api/: app.py  client.py  mcp_server.py  normalization.py  store.py  workout_normalization.py
tests/: test_api.py  test_client.py  test_mcp_server.py  test_summary_api.py  test_workout_api.py
